		Decreased Visceroid health by 25% and removed their ability to gain experience.
		Increased the chance of Tiberium or chemical deaths spawning a Visceroid from 2% to 10%.
		Increased Obelisk of Light laser damage from 200 to 360.
		Fixed Obelisk of Light charge animation and sound not playing.
		Replaced or improved several mouse cursors.
		Added Minibibs for bibless buildings.
	Engine:
		Converted Aircraft CruiseAltitude to world coordinates.
		Converted Health Radius to world coordinates.
		Converted production exits to world coordinates.
		Converted weapon projectiles to world coordinates.
		Converted actor speed to world coordinates.
		Added support for rectangular cells with forced perspective.
		Added initial support for Tmp(TS) sprites.
		Added GainsUnitUpgrades trait for leveling specific unit upgrades - firepower, armor, speed.
		Added support for crates to level up specific unit upgrades.
		Merged CrateDrop functionality into CrateSpawner.
		Added support to CrateSpawner for spawning multiple types of crates.
		Added a new Launch.Replay=$FILEPATH parameter for OpenRA.Game.exe to instantly start watching a *.rep file.
		Added HackyAI settings: ExcessPowerFactor, MinimumExcessPower, IdleBaseUnitsMaximum, RushAttackScanRadius, ProtectUnitScanRadius, RallyPointScanRadius. See the traits documentation for more information.
		Added HitAnimPalette trait for LaserZap projectiles. Laser hit animations can now specify individual palettes. Defaults to effect palette.
		Added RenderNameTag trait to show the player's name above an actor.
		Fixed performance issues with units pathing to naval transports.
		Fixed unit moving to transports that have moved.
		Updated shroud-based traits to use world units.
		Renamed AttackTesla into AttackCharge and un-hardcoded initial charge delay and delay for additional charges.
		Updated RenderBuildingCharge so you can set a custom charge sequence name (default is active).